--- a/html.html
+++ b/html.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-
+	<p>Click the button to demostrate the prompt box</p>
+	
+	<button onclick="namePrompt()">Click Here</button>
+	
+	<p id="demo"></p>
+	
 	<script type="text/javascript" src="script.js"></script>
 </body>
 
