--- a/html.html
+++ b/html.html
@@ -11,7 +11,12 @@
 	
 	<button onclick="namePrompt()">Click Here</button>
 	
-	<p id="demo"></p>
+	<p id="repeat"></p>
+	<p id="length"></p>
+	<p id="charN"></p>
+	<p id="lower"></p>
+	<p id="upper"></p>
+	<p id="subString"></p>
 	
 	<script type="text/javascript" src="script.js"></script>
 </body>
