namePrompt, loops, name, number

--- a/html.html
+++ b/html.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-	<p>Click the button to demostrate the prompt box</p>
+	<p>Click the button for the name prompt box</p>
 	
-	<button onclick="namePrompt()">Click Here</button>
+	<button onclick="namePrompt()">Name Prompt</button>
 	
 	<p id="repeat"></p>
 	<p id="length"></p>
@@ -17,6 +17,10 @@
 	<p id="lower"></p>
 	<p id="upper"></p>
 	<p id="subString"></p>
+
+	<p>Click the button for the phone number prompt box</p>
+
+	<button onclick="phonePrompt()">Phone Prompt</button>
 	
 	<script type="text/javascript" src="script.js"></script>
 </body>
