namePrompt, loops, name, number, birth

--- a/html.html
+++ b/html.html
@@ -21,6 +21,10 @@
 	<p>Click the button for the phone number prompt box</p>
 
 	<button onclick="phonePrompt()">Phone Prompt</button>
+
+	<p>Click the button for the birth date prompt box</p>
+
+	<button onclick="birthPrompt()">Birth Date Prompt</button>
 	
 	<script type="text/javascript" src="script.js"></script>
 </body>
