namePrompt, loops, name, number, birth, disaster

--- a/html.html
+++ b/html.html
@@ -25,6 +25,10 @@
 	<p>Click the button for the birth date prompt box</p>
 
 	<button onclick="birthPrompt()">Birth Date Prompt</button>
+
+	<p>Click the button to report disaster victims</p>
+
+	<button onclick="reportVictimPrompt()">Report Victims</button>
 	
 	<script type="text/javascript" src="script.js"></script>
 </body>
