namePrompt, loops, name, number, birth, disaster

--- a/html.html
+++ b/html.html
@@ -26,9 +26,11 @@
 
 	<button onclick="birthPrompt()">Birth Date Prompt</button>
 
-	<p>Click the button to report disaster victims</p>
+	<p>Click the button to report disaster victims or volutneers</p>
 
 	<button onclick="reportVictimPrompt()">Report Victims</button>
+
+	<button onclick="reportVolunteerPrompt()">Report Volunteers</button>
 	
 	<script type="text/javascript" src="script.js"></script>
 </body>
