--- a/html.html
+++ b/html.html
@@ -31,6 +31,8 @@
 	<button onclick="reportVictimPrompt()">Report Victims</button>
 
 	<button onclick="reportVolunteerPrompt()">Report Volunteers</button>
+
+	<button onclick="summaryPrompt()">Summary Prompt</button>
 	
 	<script type="text/javascript" src="script.js"></script>
 </body>
