--- a/html.html
+++ b/html.html
@@ -33,6 +33,10 @@
 	<button onclick="reportVolunteerPrompt()">Report Volunteers</button>
 
 	<button onclick="summaryPrompt()">Summary Prompt</button>
+
+	<p>Click below to see tripleFive in the console</p>
+
+	<button onclick="tripleFive()">Click Here for tripleFive()</button>
 	
 	<script type="text/javascript" src="script.js"></script>
 </body>
